# docker-images

./: README.md  SYNCED_DOCKER_CONTEXT_DIRS.txt
.github/workflows/: publish-images-to-ecr.yml
projects/components/images/: Dockerfile.custom  Makefile  versions.env
projects/components/images/base-cpu/: Dockerfile
projects/components/images/base-gpu/: Dockerfile
projects/components/images/data-cpu/: Dockerfile
projects/components/images/executor-pool/: Dockerfile  executor_server.py
projects/components/images/executor-pool-cpu/: Dockerfile
projects/components/images/flyte-cpu/: Dockerfile
projects/components/images/flyte-gpu/: Dockerfile
projects/components/images/genai-gpu/: Dockerfile
projects/components/images/ml-gpu/: Dockerfile
projects/components/images/ray-worker/: Dockerfile
projects/components/images/training-llm/: Dockerfile
projects/components/sdk/: README.md  pyproject.toml
projects/components/sdk/ml_platform_sdk/: profiling.py
projects/components/sdk/ml_platform_sdk/tasks/: data.py  efs.py  spark.py  training.py
projects/components/sdk/tests/: test_efs.py
projects/components/services/remote-agent/: Dockerfile  main.py  pool_utils.py  requirements.txt
projects/jupyter/gpu-idle-monitor/: Dockerfile  idle_monitor.py
projects/jupyter/gpu-idle-monitor/tests/: test_idle_monitor.py
projects/jupyter/images/: Dockerfile  Dockerfile.gpu  requirements.txt
projects/ray/images/: Dockerfile
projects/spark/images/: Dockerfile
projects/workflows/text2sql/: config.py  pipeline.py
projects/workflows/text2sql/images/: Dockerfile.cpu  (+1 more)
(+7 files in other folders)
